src/syntax/parser/snapshots/ling__syntax__parser__item__tests__block_no_final_expr.snap
---
source: src/syntax/parser/item.rs
expression: "parse(\"{12;}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Expr(Const(ConstIdx(0))),
  ],
  eval_as_final: false,
)), [], [])
