src/syntax/parser/snapshots/ling__syntax__parser__item__tests__block_two_exprs_no_final_expr.snap
---
source: src/syntax/parser/item.rs
expression: "parse(\"{14;12;}\", |p| p.parse_block())"
---
(Ok(Block(
  stmts: [
    Expr(Const(ConstIdx(0))),
    Expr(Const(ConstIdx(1))),
  ],
  eval_as_final: false,
)), [], [])
