src/syntax/parser/snapshots/ling__syntax__parser__item__tests__field_assignment.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"my_struct.field = 12\", |p| p.parse_stmt())"
---
(Ok(Assignment(
  lhs: Field(
    expr: Var(Simple(Unresolved("my_struct"))),
    field: Unresolved("field"),
  ),
  rhs: Const(ConstIdx(0)),
)), [], [])
