src/syntax/parser/snapshots/ling__syntax__parser__item__tests__func_recovery.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"func foo(a: uint) -> {} {} func my_func() {}\",\n    |p| p.parse_module())"
---
(Ok(Module(
  items: [
    Dummy,
    Func(Func(
      ident: Unresolved("my_func"),
      params: [],
      ret_ty: Unit,
      body: Block(
        stmts: [],
        final_expr: Unit,
      ),
    )),
  ],
)), [], [
  Unexpected(
    expected: "a type",
    found: Some(Span(
      start: 21,
      end: 23,
    )),
  ),
])
