src/syntax/parser/snapshots/ling__syntax__parser__item__tests__func_with_args_and_trailing_comma.snap
---
source: src/syntax/parser/item.rs
expression: "test_parse(\"foo(a: uint, b: uint,) {}\", |p| p.parse_func())"
---
(Ok(Func(
  ident: Unresolved("foo"),
  params: [
    (Unresolved("a"), Constructed(
      ident: Unresolved("uint"),
      params: [],
    )),
    (Unresolved("b"), Constructed(
      ident: Unresolved("uint"),
      params: [],
    )),
  ],
  ret_ty: Unit,
  body: Block(
    stmts: [],
    final_expr: Unit,
  ),
)), [], [])
